--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
         <table>
             <tr>
                 <td>
-                    <p><strong>聯絡資訊</strong><br>服務時間: 09:00-18:00星期一~星期六<br>洽詢專線: 0905-139278<br>客服信箱: FormosanFlyingFox@taiwan.org</p>
+                    <p><strong>聯絡資訊</strong><br>服務時間: 09:00-18:00星期一~星期六<br>洽詢專線: <a href="tel:+886-905139278">0905-139278</a><br>客服信箱: FormosanFlyingFox@taiwan.org</p>
                     <img src="./logo6.png" alt="logo" style="width: 240px; height: auto;">
                 </td>
                 <td>
